<resources>
    <string name="app_name">SYLU-EOA</string>
    <string name="app_name_debug">SYLU-EOA(Debug.ver)</string>
    <string name="title_course">课程表</string>
    <string name="title_toolbox">工具箱</string>
    <string name="title_me">我</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_login">登录到教务网</string>
    <string name="prompt_email">学号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录!</string>
    <string name="profile">个人信息</string>
    <string name="exit_login">退出登录</string>
    <string name="not_login_msg">请登录</string>
    <string name="confirm">确定</string>
    <string name="prompt_captcha">验证码\n</string>
    <string name="title_exam">考试</string>
    <string name="exam_year">选择学年\n</string>
    <string name="exam_term">选择学期\n</string>
    <string name="tip_year">点我选择学年学期</string>
    <string name="picker_year">选择学年</string>
    <string name="pick_sem">选择学期</string>
    <string name="secondclass">第二课堂</string>
    <string name="goTW">前往团委网</string>
    <string name="exit">退出</string>
    <string name="imagepaste">图片加水印</string>
    <string name="gpa">大创学分</string>
    <string name="quick_class_select">快速选课</string>
    <string name="class_choice_v1">请在下方勾选你想选的课程!</string>
    <string name="class_choice_v2">下面是选项设置</string>
    <string name="no_8">禁用早八</string>
    <string name="start">选课，启动！</string>
    <string name="related">期末评价</string>
</resources>