<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_calender">

    <fragment
            android:id="@+id/navigation_calender"
            android:name="com.kagg886.sylu_eoa.ui.calender.CourseFragment"
            android:label="@string/title_course"
            tools:layout="@layout/fragment_course"/>

    <fragment
            android:id="@+id/navigation_exam"
            android:name="com.kagg886.sylu_eoa.ui.exam.ExamFragment"
            android:label="@string/title_exam"
            tools:layout="@layout/fragment_exam"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.kagg886.sylu_eoa.ui.dashboard.DashboardFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_dashboard"/>


    <fragment
            android:id="@+id/navigation_me"
            android:name="com.kagg886.sylu_eoa.ui.me.MeFragment"
            android:label="@string/title_me"
            tools:layout="@layout/fragment_me"/>
</navigation>