<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textStyle="bold"
              android:textSize="20dp"
              android:text="@string/class_choice_v1" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/options"/>

    <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacing="25dp"
            app:chipSpacingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/options"
            android:id="@+id/chipGroup">

        <com.google.android.material.chip.Chip
                android:id="@+id/chipInGroup1"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="美育"
                android:textAppearance="?android:textAppearanceMedium"/>

        <com.google.android.material.chip.Chip
                android:id="@+id/chipInGroup2"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="自然"
                android:textAppearance="?android:textAppearanceMedium"/>

        <com.google.android.material.chip.Chip
                android:id="@+id/chipInGroup3"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="人文"
                android:textAppearance="?android:textAppearanceMedium"/>

        <com.google.android.material.chip.Chip
                android:id="@+id/chipInGroup4"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="身心"
                android:textAppearance="?android:textAppearanceMedium"/>

        <com.google.android.material.chip.Chip
                android:id="@+id/chipInGroup5"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="经管"
                android:textAppearance="?android:textAppearanceMedium"/>

    </com.google.android.material.chip.ChipGroup>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textStyle="bold"
              android:textSize="20dp"
              android:text="@string/class_choice_v2"
              app:layout_constraintEnd_toEndOf="parent"
              android:id="@+id/option_no8"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/chipGroup"/>
    <CheckBox
            android:text="@string/no_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_no8"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/start"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/checkBox"/>


</androidx.constraintlayout.widget.ConstraintLayout>