<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".sub_activity.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_0"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            app:errorTextColor="#FF0000"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/til"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_me"
                android:maxLength="128"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#B6B6B6"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            app:errorTextColor="#FF0000"
            app:endIconMode="password_toggle"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:imeOptions="actionNext"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_password"
                android:maxLength="128"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#B6B6B6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--            android:id="@+id/username"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="96dp"-->
    <!--            android:autofillHints="@string/prompt_email"-->
    <!--            android:hint="@string/prompt_email"-->
    <!--            android:inputType="number"-->
    <!--            android:selectAllOnFocus="true"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent"/>-->

    <!--    <EditText-->
    <!--            android:id="@+id/password"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="8dp"-->
    <!--            android:autofillHints="@string/prompt_password"-->
    <!--            android:hint="@string/prompt_password"-->
    <!--            android:imeOptions="actionDone"-->
    <!--            android:inputType="textPassword"-->
    <!--            android:selectAllOnFocus="true"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/username"/>-->

    <Button
            android:id="@+id/login"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
            android:visibility="gone"
            android:id="@+id/loading"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til" app:layout_constraintBottom_toTopOf="@+id/login"/>

</androidx.constraintlayout.widget.ConstraintLayout>